--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -61,6 +61,7 @@ main {
 .trip-card {
   height: 200px;
   min-width: 150px;
+  overflow: auto;
   background-color: white;
   border: 1px solid black;
   flex-grow: 1;
