--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,7 +27,27 @@ h1 {
 
 main {
   height: 90%;
-  padding: 25px 35px;
+  padding: 5px 35px;
+  flex-direction: column;
+}
+
+.top-nav {
+  width: 100%;
+  min-height: 50px;
+}
+
+.tab {
+  width: auto;
+  height: 100%;
+  padding: 5px 20px;
+  flex-direction: column;
+  justify-content: center;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.top-nav h2 {
+  margin: 0;
 }
 
 .trips-container {
@@ -78,6 +98,11 @@ main {
   width: 50%;
   flex-direction: column;
   background: lightgray;
+}
+
+.focused {
+  background-color: lightpink;
+  cursor: default;
 }
 
 .flex {
