--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,6 +36,41 @@ main {
   min-height: 50px;
 }
 
+.login-section {
+  background: lightpink;
+  width: 45%;
+  margin: 7% auto 0;
+  padding: 40px;
+}
+
+.login-form {
+  width: 90%;
+  margin: 0 auto;
+  background: lightcyan;
+  flex-direction: column;
+}
+
+legend {
+  font-size: 25px;
+  align-self: center;
+}
+
+.login-form input {
+  width: 100%;
+  height: 30px;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+
+.login-form label {
+  margin-top: 20px;
+  align-self: flex-start;
+}
+
+#login {
+  width: 50%;
+}
+
 .tab {
   width: auto;
   height: 100%;
