Add aria values to necessary elements, as well as add header to req form

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,11 +50,6 @@ main {
   flex-direction: column;
 }
 
-legend {
-  font-size: 25px;
-  align-self: center;
-}
-
 .login-form input {
   width: 100%;
   height: 30px;
@@ -133,6 +128,31 @@ legend {
   width: 50%;
   flex-direction: column;
   background: lightgray;
+}
+
+.request-form input, .request-form select {
+  margin-bottom: 10px;
+  height: 30px;
+  border-radius: 5px;
+}
+
+.request-form label {
+  align-self: flex-start;
+  margin-bottom: 5px;
+  font-size: 20px;
+}
+
+input:focus, select:focus {
+  outline: 2px solid royalblue;
+  box-shadow: 1px 1px 8px 1px royalblue;
+}
+
+#requestButton {
+  margin-top: 15px;
+  align-self: flex-start;
+  width: 50%;
+  height: 35px;
+  font-size: 20px;
 }
 
 .focused {
