Add messages that display information after a form is submitted, letting the user know if an error occurred

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,6 +66,12 @@ main {
   width: 50%;
 }
 
+.login-message {
+  font-size: 20px;
+  align-self: center;
+  margin: 15px 0 0;
+}
+
 .tab {
   width: auto;
   height: 100%;
