--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -41,9 +41,13 @@ main {
 .login-section {
   background: white;
   width: 45%;
-  margin: 7% auto 0;
+  margin: 5% auto 0;
   padding: 0 20px 40px;
   border-radius: 10px;
+}
+
+#loginLabel {
+  margin-bottom: 0;
 }
 
 .login-form {
@@ -70,8 +74,8 @@ main {
 
 .login-message {
   font-size: 20px;
-  align-self: center;
   margin: 15px 0 0;
+  text-align: center;
 }
 
 .tab {
@@ -80,8 +84,8 @@ main {
   padding: 5px 20px;
   flex-direction: column;
   justify-content: center;
-  background-color: transparent;
   cursor: pointer;
+  border-radius: 10px 10px 0 0;
 }
 
 .top-nav h2 {
@@ -93,11 +97,12 @@ main {
   flex-direction: row;
   gap: 10px;
   text-align: center;
+  background-color: #75975e
 }
 
 .trip-list {
   min-width: 33%;
-  background-color: green;
+  background-color: #4b6043;
 }
 
 .card-containers {
@@ -105,20 +110,21 @@ main {
   margin: auto;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 10px 10px;
-  gap: 10px 8px;
-  background-color: lightpink;
+  padding: 0 10px;
+  gap: 0 8px;
 }
 
 
 .trip-list h2 {
   flex-basis: 100%;
-  margin: 10px 0;
+  margin: 10px 0 0;
+  color: white;
 }
 
 .trip-card {
   height: 200px;
   min-width: 150px;
+  margin: 10px 0 5px;
   overflow: auto;
   background-color: white;
   border: 1px solid black;
@@ -128,14 +134,22 @@ main {
 .form-container {
   width: 100%;
   text-align: center;
-  background-color:lightpink;
+  background-color:#75975e;
+}
+
+.form-container h3 {
+  font-size: 25px;
+  margin: 10px 0;
 }
 
 .request-form {
-  margin: 20px auto;
+  margin: 10px auto 20px;
   width: 50%;
+  min-width: 390px;
   flex-direction: column;
-  background: lightgray;
+  background: white;
+  padding: 20px 30px;
+  border-radius: 10px;
 }
 
 .request-form input, .request-form select {
@@ -147,7 +161,7 @@ main {
 .request-form label {
   align-self: flex-start;
   margin-bottom: 5px;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 input:focus, select:focus {
@@ -163,8 +177,14 @@ input:focus, select:focus {
   font-size: 20px;
 }
 
+#requestButton:hover, #login:hover {
+  background-color: #4b6043;
+  color: white;
+  cursor: pointer;
+}
+
 .focused {
-  background-color: lightpink;
+  background-color: #75975e;
   cursor: default;
 }
 
